# security_camera

./: .gitignore  CMakeLists.txt  Makefile  README.md  library.cmake  main.c
convert/: CMakeLists.txt  convert_manager.cpp  convert_manager.h  mjpeg2rgb.c  mjpeg2rgb.cpp
display/: disp_manager.c  disp_manager.h  fb.c
include/: config.h
include/display/: disp_manager.h
test/: qtlabel.cpp  video_test.cpp  win_test.cpp
video/: CMakeLists.txt  v4l2.cpp  video_manager.h
